feat: Brand Kit completo — 7 marcas GLP (Ultragaz/Supergasbras/Copagaz/Nacional/Liquigás/Consigaz/Minasgás) + Independente — v1.1.0 + worker v2.47.1

--- a/marketing-posts.html
+++ b/marketing-posts.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Posts Marketing v1.0.0 — MoskoGás</title>
+<title>Posts Marketing v1.1.0 — MoskoGás</title>
 <script src="shared.js"></script>
 <style>
 * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -116,7 +116,7 @@ label { font-size: 12px; font-weight: 600; color: #475569; display: block; margi
 </head>
 <body>
 <div id="nav-placeholder"></div>
-<div class="version-badge">v1.0.0 — marketing-posts</div>
+<div class="version-badge">v1.1.0 — marketing-posts</div>
 
 <div class="container">
 
@@ -267,9 +267,38 @@ label { font-size: 12px; font-weight: 600; color: #475569; display: block; margi
 
   <!-- ===== TAB: CONFIG REVENDA ===== -->
   <div id="section-config" style="display:none">
+
+    <!-- BRAND KIT: Escolha da marca/distribuidora -->
     <div class="card">
-      <div class="card-title">🏪 Perfil da Revenda</div>
-      <p style="font-size:13px;color:#64748b;margin-bottom:18px">Essas informações são usadas em TODOS os posts gerados pela IA. Quanto mais detalhado, melhor o resultado.</p>
+      <div class="card-title">🏭 Marca / Distribuidora</div>
+      <p style="font-size:13px;color:#64748b;margin-bottom:18px">Escolha a marca para carregar o enxoval completo: cores, botijão, logo e tom de comunicação.</p>
+
+      <div id="brandGrid" style="display:grid;grid-template-columns:repeat(auto-fill,minmax(150px,1fr));gap:12px;margin-bottom:20px"></div>
+
+      <!-- Preview do Brand Kit ativo -->
+      <div id="brandPreview" style="display:none;border:2px solid var(--brand-color,#6366f1);border-radius:12px;padding:16px;margin-bottom:16px;transition:all 0.3s">
+        <div style="display:flex;align-items:center;gap:16px;flex-wrap:wrap">
+          <div id="brandBottle" style="font-size:56px;line-height:1"></div>
+          <div style="flex:1">
+            <div id="brandName" style="font-size:18px;font-weight:800;margin-bottom:4px"></div>
+            <div id="brandSlogan" style="font-size:12px;color:#64748b;margin-bottom:10px"></div>
+            <div style="display:flex;gap:8px;flex-wrap:wrap">
+              <div id="brandColor1" style="width:28px;height:28px;border-radius:6px;border:1px solid #e2e8f0"></div>
+              <div id="brandColor2" style="width:28px;height:28px;border-radius:6px;border:1px solid #e2e8f0"></div>
+              <div id="brandColor3" style="width:28px;height:28px;border-radius:6px;border:1px solid #e2e8f0"></div>
+            </div>
+          </div>
+          <div style="text-align:right">
+            <div id="brandImgPrompt" style="background:#f8fafc;border-radius:8px;padding:10px;font-size:11px;color:#64748b;max-width:220px;line-height:1.5"></div>
+          </div>
+        </div>
+        <div id="brandCustomNote" style="margin-top:12px;font-size:12px;color:#6366f1;background:#f0f0ff;border-radius:8px;padding:8px 12px;display:none"></div>
+      </div>
+    </div>
+
+    <!-- DADOS DA REVENDA -->
+    <div class="card">
+      <div class="card-title">🏪 Dados da Revenda</div>
 
       <div class="config-grid">
         <div>
@@ -285,34 +314,20 @@ label { font-size: 12px; font-weight: 600; color: #475569; display: block; margi
           <input id="cfgEndereco" placeholder="Ex: Av. Panamericana, 295, Campo Grande/MS">
         </div>
         <div>
-          <label>Site</label>
+          <label>Site / Link WhatsApp</label>
           <input id="cfgSite" placeholder="Ex: https://moskogás.com.br">
         </div>
       </div>
 
       <div style="margin-top:16px">
         <label>Diferenciais e regras comerciais</label>
-        <textarea id="cfgRegras" rows="3" placeholder="Ex: Entrega grátis, aceita Gás do Povo, aceita cartão, funciona 7 dias por semana, entrega em até 30 minutos, melhor preço de Campo Grande..."></textarea>
-      </div>
-
-      <div style="margin-top:16px">
-        <label>Instrução extra para IA (prompt personalizado)</label>
-        <textarea id="cfgPrompt" rows="4" placeholder="Ex: Use sempre um tom animado e local. Mencione que somos referência em Campo Grande há X anos. Crie posts variados sobre: promoção de P13, dicas de segurança com gás, água mineral gelada no verão, facilidade do delivery..."></textarea>
-      </div>
-
-      <div style="margin-top:16px">
-        <label>Frequência padrão de publicação</label>
-        <select id="cfgFreq">
-          <option value="diario">1 post por dia (ideal para GMB)</option>
-          <option value="3dias">1 post a cada 3 dias</option>
-          <option value="semanal">2 posts por semana</option>
-        </select>
+        <textarea id="cfgRegras" rows="3" placeholder="Ex: Entrega grátis, aceita Gás do Povo, aceita cartão, funciona 7 dias por semana, entrega em até 30 minutos..."></textarea>
       </div>
 
       <div style="margin-top:16px;padding-top:16px;border-top:1px solid #f1f5f9">
-        <label>Logo da revenda (URL ou upload)</label>
+        <label>Logo da revenda</label>
         <div style="display:flex;gap:8px">
-          <input id="cfgLogo" placeholder="https://... ou use o botão para fazer upload">
+          <input id="cfgLogo" placeholder="https://... ou faça upload">
           <button onclick="document.getElementById('cfgLogoFile').click()" class="btn" style="white-space:nowrap">📁 Upload</button>
           <input type="file" id="cfgLogoFile" accept="image/*" style="display:none" onchange="uploadLogo(this)">
         </div>
@@ -320,15 +335,41 @@ label { font-size: 12px; font-weight: 600; color: #475569; display: block; margi
           <img id="logoImg" style="height:60px;border-radius:8px;border:1px solid #e2e8f0">
         </div>
       </div>
+    </div>
 
-      <div style="margin-top:18px;display:flex;gap:10px;flex-wrap:wrap">
-        <button onclick="saveConfig()" class="btn btn-primary" id="btnSaveConfig">💾 Salvar configurações</button>
-        <button onclick="testGenerate()" class="btn" style="background:#f0f0ff;color:#6366f1;border-color:#a78bfa">✨ Testar geração (1 post)</button>
+    <!-- PROMPT DE IA -->
+    <div class="card">
+      <div class="card-title">🤖 Personalização de IA</div>
+      <p style="font-size:13px;color:#64748b;margin-bottom:14px">O Brand Kit já configura o tom automaticamente. Use este campo para instruções extras exclusivas da sua revenda.</p>
+
+      <div>
+        <label>Instrução extra (prompt personalizado)</label>
+        <textarea id="cfgPrompt" rows="4" placeholder="Ex: Mencione que somos referência há 15 anos em Campo Grande. Sempre citar que temos entrega no mesmo dia. Criar posts sobre: promoções de fim de semana, dicas de segurança, água mineral gelada no verão..."></textarea>
       </div>
+
+      <div style="margin-top:14px">
+        <label>Frequência padrão de publicação</label>
+        <select id="cfgFreq">
+          <option value="diario">📅 1 post por dia (ideal para Google Meu Negócio)</option>
+          <option value="3dias">📅 1 post a cada 3 dias</option>
+          <option value="semanal">📅 2 posts por semana</option>
+        </select>
+      </div>
+    </div>
+
+    <div style="display:flex;gap:10px;flex-wrap:wrap;margin-bottom:32px">
+      <button onclick="saveConfig()" class="btn btn-primary" id="btnSaveConfig" style="font-size:14px;padding:12px 24px">💾 Salvar configurações</button>
+      <button onclick="testGenerate()" class="btn" style="background:#f0f0ff;color:#6366f1;border-color:#a78bfa">✨ Testar geração (1 post)</button>
     </div>
   </div>
 
 </div>
+
+<!-- Hidden brand kit fields -->
+<input type="hidden" id="cfgBrandId" value="">
+<input type="hidden" id="cfgBrandImgPrompt" value="">
+<input type="hidden" id="cfgBrandColors" value="">
+<input type="hidden" id="cfgBrandTom" value="">
 
 <!-- Modal: editar post -->
 <div class="modal-overlay" id="modalPost">
@@ -718,6 +759,204 @@ function renderCalendar() {
 // ══════════════════════════════════════════════════
 // CONFIG REVENDA
 // ══════════════════════════════════════════════════
+// ══════════════════════════════════════════════════
+// BRAND KIT — Marcas de GLP do Brasil
+// ══════════════════════════════════════════════════
+const BRANDS = [
+  {
+    id: 'ultragaz',
+    nome: 'Ultragaz',
+    slogan: 'Energia que transforma',
+    emoji: '🔵',
+    bottle: '🫙',
+    bottleColor: '#1B5FA6',
+    bottleDesc: 'Botijão azul com faixa branca',
+    colors: ['#1B5FA6', '#FFFFFF', '#003087'],
+    colorNames: ['Azul Ultragaz', 'Branco', 'Azul Escuro'],
+    tom: 'Confiante, tradicional e familiar. Maior distribuidora do Brasil.',
+    imgPrompt: 'blue LPG gas cylinder Ultragaz brand, delivery in Brazil, realistic photo, blue and white colors, residential delivery',
+    logoNote: 'Upload o logo da Ultragaz da sua revenda',
+  },
+  {
+    id: 'supergasbras',
+    nome: 'Supergasbras',
+    slogan: 'Com você em todo lugar',
+    emoji: '🟡',
+    bottle: '🫙',
+    bottleColor: '#C8960C',
+    bottleDesc: 'Botijão dourado/amarelo',
+    colors: ['#C8960C', '#E8B419', '#1A1A1A'],
+    colorNames: ['Dourado', 'Amarelo', 'Preto'],
+    tom: 'Dinâmico e acessível. Destacar presença local e preço competitivo.',
+    imgPrompt: 'golden yellow LPG gas cylinder Supergasbras Brazil, delivery service, realistic photo, gold and black colors',
+    logoNote: 'Upload o logo da Supergasbras da sua revenda',
+  },
+  {
+    id: 'copagaz',
+    nome: 'Copagaz',
+    slogan: 'Gás e muito mais',
+    emoji: '🟢',
+    bottle: '🫙',
+    bottleColor: '#00833E',
+    bottleDesc: 'Botijão verde',
+    colors: ['#00833E', '#FFFFFF', '#006630'],
+    colorNames: ['Verde Copagaz', 'Branco', 'Verde Escuro'],
+    tom: 'Fresco, sustentável e próximo da comunidade local.',
+    imgPrompt: 'green LPG gas cylinder Copagaz Brazil, gas delivery, realistic photo, green and white colors',
+    logoNote: 'Upload o logo da Copagaz da sua revenda',
+  },
+  {
+    id: 'nacionalgas',
+    nome: 'Nacional Gás',
+    slogan: 'Qualidade que você confia',
+    emoji: '⚫',
+    bottle: '🫙',
+    bottleColor: '#5A5A5A',
+    bottleDesc: 'Botijão cinza',
+    colors: ['#5A5A5A', '#E8E8E8', '#1A1A1A'],
+    colorNames: ['Cinza', 'Prata', 'Preto'],
+    tom: 'Sólido, econômico e confiável. Foco em custo-benefício.',
+    imgPrompt: 'gray silver LPG gas cylinder Nacional Gas Brazil, residential gas delivery, realistic photo, gray colors',
+    logoNote: 'Upload o logo da Nacional Gás da sua revenda',
+  },
+  {
+    id: 'liquigas',
+    nome: 'Liquigás',
+    slogan: 'Energia para sua vida',
+    emoji: '🔴',
+    bottle: '🫙',
+    bottleColor: '#CC0000',
+    bottleDesc: 'Botijão vermelho',
+    colors: ['#CC0000', '#FFFFFF', '#990000'],
+    colorNames: ['Vermelho', 'Branco', 'Vermelho Escuro'],
+    tom: 'Energético e forte. Marca do grupo Petrobras, transmite segurança.',
+    imgPrompt: 'red LPG gas cylinder Liquigas Petrobras Brazil, gas delivery service, realistic photo, red and white colors',
+    logoNote: 'Upload o logo da Liquigás da sua revenda',
+  },
+  {
+    id: 'consigaz',
+    nome: 'Consigaz',
+    slogan: 'Qualidade garantida',
+    emoji: '🟠',
+    bottle: '🫙',
+    bottleColor: '#E05A00',
+    bottleDesc: 'Botijão laranja',
+    colors: ['#E05A00', '#FFFFFF', '#B34700'],
+    colorNames: ['Laranja', 'Branco', 'Laranja Escuro'],
+    tom: 'Regional e próximo. Foco em atendimento personalizado.',
+    imgPrompt: 'orange LPG gas cylinder Consigaz Brazil, gas delivery, realistic photo, orange and white colors',
+    logoNote: 'Upload o logo da Consigaz da sua revenda',
+  },
+  {
+    id: 'minasgaz',
+    nome: 'Minasgás',
+    slogan: 'O gás de Minas',
+    emoji: '🟤',
+    bottle: '🫙',
+    bottleColor: '#7B3F00',
+    bottleDesc: 'Botijão marrom/terracota',
+    colors: ['#7B3F00', '#FFFFFF', '#5C2E00'],
+    colorNames: ['Marrom', 'Branco', 'Marrom Escuro'],
+    tom: 'Regional mineiro, tradicional e caseiro. Tom acolhedor.',
+    imgPrompt: 'brown terracotta LPG gas cylinder Minasgaz Brazil, residential delivery, realistic photo',
+    logoNote: 'Upload o logo da Minasgás da sua revenda',
+  },
+  {
+    id: 'independente',
+    nome: 'Independente',
+    slogan: 'Minha marca, meu estilo',
+    emoji: '⭐',
+    bottle: '🫙',
+    bottleColor: '#6366f1',
+    bottleDesc: 'Cores personalizadas',
+    colors: ['#6366f1', '#FFFFFF', '#374151'],
+    colorNames: ['Cor Principal', 'Secundária', 'Texto'],
+    tom: 'Personalizado conforme as instruções da revenda.',
+    imgPrompt: 'LPG gas cylinder delivery Brazil, professional photo, gas delivery service, realistic',
+    logoNote: 'Upload o logo da sua revenda',
+    custom: true,
+  },
+];
+
+let selectedBrand = null;
+
+function renderBrandGrid(savedBrandId) {
+  const grid = document.getElementById('brandGrid');
+  grid.innerHTML = BRANDS.map(b => `
+    <div onclick="selectBrand('${b.id}')" id="brand-card-${b.id}" style="
+      border: 2px solid ${savedBrandId === b.id ? b.bottleColor : '#e2e8f0'};
+      border-radius: 12px; padding: 14px 10px; text-align: center; cursor: pointer;
+      background: ${savedBrandId === b.id ? b.bottleColor + '18' : '#fff'};
+      transition: all 0.2s; position: relative;">
+      ${savedBrandId === b.id ? `<div style="position:absolute;top:6px;right:6px;background:${b.bottleColor};color:#fff;border-radius:99px;font-size:9px;font-weight:700;padding:1px 6px">✓ ATIVO</div>` : ''}
+      <div style="font-size:32px;margin-bottom:6px">${b.emoji}</div>
+      <div style="font-size:12px;font-weight:700;color:#1e293b">${b.nome}</div>
+      <div style="width:100%;height:6px;border-radius:99px;background:${b.bottleColor};margin-top:8px"></div>
+    </div>
+  `).join('');
+}
+
+function selectBrand(id) {
+  const b = BRANDS.find(b => b.id === id);
+  if (!b) return;
+  selectedBrand = b;
+
+  // Update grid selection
+  BRANDS.forEach(br => {
+    const card = document.getElementById('brand-card-' + br.id);
+    card.style.border = `2px solid ${br.id === id ? br.bottleColor : '#e2e8f0'}`;
+    card.style.background = br.id === id ? br.bottleColor + '18' : '#fff';
+  });
+
+  // Show preview
+  const preview = document.getElementById('brandPreview');
+  preview.style.display = '';
+  preview.style.setProperty('--brand-color', b.bottleColor);
+  preview.style.borderColor = b.bottleColor;
+  preview.style.background = b.bottleColor + '08';
+
+  document.getElementById('brandBottle').textContent = b.emoji === '⭐' ? '⭐' :
+    `<span style="filter:drop-shadow(0 2px 4px rgba(0,0,0,0.2))">${getBrandBottleSvg(b)}</span>`;
+  document.getElementById('brandName').textContent = b.nome;
+  document.getElementById('brandName').style.color = b.bottleColor;
+  document.getElementById('brandSlogan').textContent = b.slogan;
+
+  const colors = [b.colors[0], b.colors[1], b.colors[2]];
+  ['brandColor1','brandColor2','brandColor3'].forEach((elId, i) => {
+    const el = document.getElementById(elId);
+    el.style.background = colors[i];
+    el.title = b.colorNames[i];
+    el.style.boxShadow = `0 0 0 2px #fff, 0 0 0 4px ${colors[i]}40`;
+  });
+
+  document.getElementById('brandImgPrompt').innerHTML = `<strong>Imagem DALL-E:</strong><br>"${b.imgPrompt}"`;
+
+  if (b.custom) {
+    document.getElementById('brandCustomNote').style.display = '';
+    document.getElementById('brandCustomNote').innerHTML = '⭐ Modo independente — configure as cores e tom livremente nas instruções extras abaixo.';
+  } else {
+    document.getElementById('brandCustomNote').style.display = 'none';
+  }
+
+  // Update DALL-E image prompt default in the hidden field
+  document.getElementById('cfgBrandId').value = id;
+  document.getElementById('cfgBrandImgPrompt').value = b.imgPrompt;
+  document.getElementById('cfgBrandColors').value = JSON.stringify(b.colors);
+  document.getElementById('cfgBrandTom').value = b.tom;
+
+  toast(`✅ Marca "${b.nome}" selecionada!`, 'success');
+}
+
+function getBrandBottleSvg(b) {
+  // Retorna emoji colorido representando o botijão
+  const colorMap = {
+    '#1B5FA6': '🔵', '#C8960C': '🟡', '#00833E': '🟢',
+    '#5A5A5A': '⚫', '#CC0000': '🔴', '#E05A00': '🟠',
+    '#7B3F00': '🟤', '#6366f1': '⭐'
+  };
+  return `<span style="font-size:40px">${colorMap[b.bottleColor] || '🫙'}</span>`;
+}
+
 async function loadConfig() {
   try {
     const cfg = await api('/api/marketing/config');
@@ -733,6 +972,8 @@ async function loadConfig() {
       document.getElementById('logoImg').src = cfg.logo_url;
       document.getElementById('logoPreview').style.display = '';
     }
+    renderBrandGrid(cfg.brand_id || '');
+    if (cfg.brand_id) selectBrand(cfg.brand_id);
   } catch(e) { toast('Erro ao carregar config', 'error'); }
 }
 
@@ -746,12 +987,17 @@ async function saveConfig() {
     prompt_extra: document.getElementById('cfgPrompt').value,
     frequencia: document.getElementById('cfgFreq').value,
     logo_url: document.getElementById('cfgLogo').value,
+    brand_id: document.getElementById('cfgBrandId').value,
+    brand_img_prompt: document.getElementById('cfgBrandImgPrompt').value,
+    brand_colors: document.getElementById('cfgBrandColors').value,
+    brand_tom: document.getElementById('cfgBrandTom').value,
   };
   const btn = document.getElementById('btnSaveConfig');
   btn.disabled = true; btn.textContent = '⏳ Salvando...';
   try {
     await api('/api/marketing/config', { method: 'POST', body: JSON.stringify(cfg) });
     toast('✅ Configurações salvas!', 'success');
+    renderBrandGrid(cfg.brand_id);
   } catch(e) { toast('Erro: ' + e.message, 'error'); }
   btn.disabled = false; btn.textContent = '💾 Salvar configurações';
 }
